# malefic

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.GNU  Makefile  Makefile.toml  README.md  autorun.yaml  config.yaml  config_lint.json  config_schema.json  docker-compose.yml  implant.yaml  malefic.yar  prelude.yaml  remap.sh  rust-toolchain.toml
lib/libudis86-sys/: Cargo.toml  README.md  build.rs
lib/libudis86-sys/src/: api.rs  itab.rs  lib.rs  types.rs
malefic/: Cargo.toml  build.rs
malefic-3rd/: Cargo.toml
malefic-3rd-template/: .gitignore  Cargo.toml  README.md
malefic-3rd-template/malefic-3rd-c/: Cargo.toml  README.md  build.rs
malefic-3rd-template/malefic-3rd-c/src/: lib.rs
malefic-3rd-template/malefic-3rd-ffi/: Cargo.toml
malefic-3rd-template/malefic-3rd-ffi/src/: lib.rs
malefic-3rd-template/malefic-3rd-go/: Cargo.toml  README.md  build.rs
malefic-3rd-template/malefic-3rd-go/src/: lib.rs
malefic-3rd-template/malefic-3rd-nim/: Cargo.toml  README.md  build.rs
malefic-3rd-template/malefic-3rd-nim/src/: lib.rs
malefic-3rd-template/malefic-3rd-rust/: Cargo.toml  README.md
malefic-3rd-template/malefic-3rd-rust/src/: lib.rs
malefic-3rd-template/malefic-3rd-zig/: Cargo.toml  README.md  build.rs
malefic-3rd-template/malefic-3rd-zig/src/: lib.rs
malefic-3rd-template/src/: lib.rs
malefic-3rd/src/: lib.rs  prelude.rs
malefic-3rd/src/curl/: mod.rs
malefic-3rd/src/hook/: mod.rs
malefic-3rd/src/pty/: mod.rs
malefic-3rd/src/rem/: mod.rs
malefic-3rd/tests/: test_hook.rs
malefic-core/: Cargo.toml
malefic-core/src/: lib.rs
malefic-core/src/collector/: mod.rs
malefic-core/src/common/: error.rs  mod.rs  sys.rs
malefic-core/src/config/: config.rs  mod.rs
malefic-core/src/dga/: algorithm.rs  generator.rs  mod.rs
malefic-core/src/manager/: addons.rs  internal.rs  manager.rs  mod.rs
malefic-core/src/scheduler/: mod.rs  task.rs
malefic-core/src/transport/: mod.rs  server_manager.rs
malefic-crates/autorun/: Cargo.toml  README.md
malefic-crates/autorun/src/: autorun.rs  lib.rs
malefic-crates/codec/: Cargo.toml  README.md
malefic-crates/codec/src/: aes.rs  aes2.rs  base45.rs  base58.rs  base64.rs  chacha.rs  des.rs  ipv4.rs  lib.rs  mac.rs  rc4.rs  uuid.rs  xor.rs
malefic-crates/common/: Cargo.toml  README.md
malefic-crates/common/src/: errors.rs  getrandom_compat.rs  lib.rs  random.rs  tinyserde.rs  utils.rs
malefic-crates/crypto/: Cargo.toml  README.md
malefic-crates/crypto/src/: lib.rs
malefic-crates/evader/: Cargo.toml
malefic-crates/evader/src/: anti_emu.rs  anti_forensic.rs  api_untangle.rs  cfg_patch.rs  etw_pass.rs  god_speed.rs  lib.rs  normal_api.rs  sandbox.rs  sleep_encrypt.rs  types.rs  vm.rs
malefic-crates/features/: Cargo.toml
malefic-crates/features/src/: lib.rs
malefic-crates/gateway/: Cargo.toml
malefic-crates/gateway/src/: lib.rs  runtime.rs  traits.rs
malefic-crates/loader/: Cargo.toml  README.md
malefic-crates/loader/examples/: test_inject.rs
malefic-crates/loader/src/: hot_modules.rs  lib.rs  memory.rs
malefic-crates/macro/: Cargo.toml  README.md
malefic-crates/macro/src/: lazy_static_impl.rs  lib.rs
malefic-crates/manager/: Cargo.toml  README.md
malefic-crates/manager/src/: addons.rs  internal.rs  lib.rs  manager.rs
malefic-crates/module/: Cargo.toml  README.md
malefic-crates/module/src/: abi.rs  codec.rs  ffi.rs  lib.rs  macro.rs  module_sdk.rs  prelude.rs  rtmodule.rs
malefic-crates/net/: Cargo.toml  README.md
malefic-crates/net/src/: lib.rs
malefic-crates/process/: Cargo.toml  README.md
malefic-crates/process/src/: exec.rs  lib.rs
malefic-crates/proto/: Cargo.toml  README.md  build.rs
malefic-crates/proto/src/: lib.rs
malefic-crates/runtime/: Cargo.toml
malefic-crates/runtime/src/: host.rs  lib.rs
malefic-helper/: Cargo.toml  build.rs  malefic_win_kit.h
malefic-helper/src/: lib.rs
malefic-helper/src/common/: exec.rs  filesys.rs  hot_modules.rs  loader.rs  memory.rs  mod.rs  net.rs  process.rs  process_test.rs  sysinfo.rs  sysinfo_test.rs  utils.rs
malefic-helper/src/darwin/: mod.rs
malefic-helper/src/linux/: mod.rs
malefic-helper/src/protobuf/: implantpb.rs  mod.rs
malefic-helper/src/win/: mod.rs
malefic-helper/tests/: test_anti.rs  test_common.rs  test_ipconfig.rs  test_pipe.rs  test_process.rs  test_reg.rs  test_schelduler.rs  test_service.rs  test_token.rs  test_win.rs  test_wmi.rs
malefic-modules/: Cargo.toml  build.rs
malefic-modules/src/: lib.rs  macro.rs  prelude.rs
malefic-modules/src/example/: example.rs
malefic-modules/src/execute/: dllspawn.rs  exec.rs  execute_armory.rs  execute_assemble.rs  execute_assembly.rs  execute_bof.rs  execute_dll.rs  execute_exe.rs  execute_local.rs  execute_powershell.rs  execute_shellcode.rs  inline_local.rs  mod.rs  open.rs
malefic-modules/src/fs/: cat.rs  cd.rs  chmod.rs  (+11 more)
malefic-modules/tests/: test_module.rs
malefic-mutant/: Cargo.toml  README.md  build.rs  config_lint.json
malefic-mutant/src/: cmd.rs  logger.rs  main.rs
malefic-prelude/: Cargo.toml  build.rs
malefic-prelude/src/: lib.rs  main.rs
malefic-prelude/tests/: test_autorun.rs  test_scheduler.rs
malefic-proto/: Cargo.toml  build.rs
malefic-proto/src/: lib.rs  parser.rs  prelude.rs  scheduler.rs
malefic-proto/tests/: test_age.rs  test_crypto.rs
malefic-proxydll/: Cargo.toml  README.md  build.rs  proxy.def
malefic-proxydll/src/: payload.rs
malefic-pulse/: Cargo.toml  Linker32.ld  Linker64.ld  build.rs
malefic-pulse/scripts/: linker.ld
malefic-pulse/src/: constants.rs  hash.rs  instance.rs  lib.rs  main.rs  memory.rs  resolve.rs  windows.rs
malefic-starship/: Cargo.toml  README.md
malefic-starship/asm/: direct_syscall.asm  edr_syscall_1.asm  edr_syscall_2.asm  indirect_syscall.asm  woodpecker_assm.asm
malefic-starship/src/: launch.rs  lib.rs  main.rs  obf.rs  types.rs
malefic-trait/: Cargo.toml
malefic-trait/src/: lib.rs
malefic/src/: beacon.rs  bind.rs  bootstrap.rs  guardrail.rs  lib.rs  main.rs  malefic.rs  meta.rs  session_loop.rs  stub.rs  windows_service.rs
(+485 files in other folders)
