cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
    "malefic",
    "malefic-modules",
    "malefic-helper",
    "malefic-trait",
    "malefic-mutant",
    "malefic-core",
    "malefic-prelude",
    "malefic-proto",
    "malefic-pulse",
    "malefic-3rd",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
opt-level = "z"
debug-assertions = false
strip = true
lto = "fat"
codegen-units = 16
incremental = false
rustflags = [
    "-Z", "trim-diagnostic-paths",
    "--cfg", "hide_path",
]
