[package]
name = "malefic-3rd"
version = "0.1.1"
edition = "2021"

[lib]
name = "malefic_3rd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["rem", "as_cdylib"]
full = ["rem", "curl"]

as_cdylib = ["malefic-modules/disable_register"]

curl = ["surf"]
memory_dial = []
rem_dial = []
load_rem = []
rem = ["malefic-helper/rem_static", "rem_dial", "memory_dial"]
#rem_reflection = ["malefic-helper/rem_reflection", "rem_dial", "load_rem", "memory_dial"]


[dependencies]
malefic-modules = { path = "../malefic-modules", features = ["nano"]}
malefic-trait = { path = "../malefic-trait" }
malefic-proto = { path = "../malefic-proto" }
malefic-helper = { path = "../malefic-helper"}
async-trait = "0.1"
anyhow = "1.0"
futures = "0.3.31"
obfstr = "0.4.3"
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls"] , optional = true}

[target.'cfg(unix)'.dependencies]
libc = "0.2"
