[package]
name = "malefic-core"
version = "0.1.1"
edition = "2021"

[features]
default = ["hot_load", "register_info", "transport_tcp", "tls"]
bind = []
hot_load = []
register_info = []

# internal feature
tcp = []
tls = ["async-tls", "rustls", "rustls-pemfile", "webpki-roots"]
mtls = ["tls"]

proxy = []
http_proxy = ["httparse", "proxy"]
socks5_proxy = ["proxy"]

# export transport feature
transport_http = ["httparse", "tcp"]
transport_tcp = ["tcp"]
transport_rem = ["malefic-helper/rem_static"]

[dependencies]
cfg-if = "1.0.0"
async-trait = "0.1.83"
async-net = "2.0.0"
futures = "0.3.31"
futures-timer = "3.0.0"
strum = "0.26.3"
strum_macros = "0.26.4"
lazy_static = "1.5.0"
anyhow = "1.0.86"
thiserror = "1.0.64"
obfstr = "0.4.3"
httparse = { version = "1.8" , optional = true}


# Runtime
async-std = { version = "1.13.0", features = ["unstable", "attributes"], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }
smol = { version = "2.0.2",optional = true }

# tls
async-tls = { version = "0.12.0", optional = true }
rustls = { version = "0.20.6", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1.0.4", optional = true }
webpki-roots = { version = "0.22", optional = true }


malefic-helper = { path= "../malefic-helper", features = [ "default" ] }
malefic-proto = { path = "../malefic-proto" }
malefic-modules = { path = "../malefic-modules"}
malefic-3rd = { path = "../malefic-3rd" , optional = true}
base64 = "0.22"

