[package]
name = "malefic-core"
version = "0.1.1"
edition = "2021"

[features]
default = ["tokio", "hot_load", "register_info", "transport_tcp"]
bind = []
hot_load = []
register_info = []
async_scheduler = []
# internal feature
tcp = []
tls = ["async-tls", "rustls", "rustls-pemfile", "webpki-roots"]
mtls = ["tls"]
proxy = ["httparse","url"]
dga = ["chrono", "sha2"]
# export transport feature
transport_http = ["httparse", "tcp"]
transport_tcp = ["tcp"]
transport_rem = ["malefic-helper/rem_static"]

[dependencies]
cfg-if = { workspace = true }
async-trait = { workspace = true }
async-net = "2.0.0"
futures = { workspace = true }
futures-timer = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
obfstr = { workspace = true }

# for dga,temp no optional
chrono = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

httparse = { version = "1.8", optional = true }

# Runtime
async-std = { version = "1.13.0", features = ["unstable", "attributes"], optional = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"], optional = true }
smol = { version = "2.0.2", optional = true }

# tls
async-tls = { version = "0.12.0", optional = true }
rustls = { version = "0.20.6", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1.0.4", optional = true }
webpki-roots = { version = "0.22", optional = true }

# proxy
url = { workspace = true, optional = true }

malefic-helper = { path= "../malefic-helper", features = [ "default" ] }
malefic-proto = { path = "../malefic-proto" }
malefic-modules = { path = "../malefic-modules"}
malefic-3rd = { path = "../malefic-3rd" , optional = true}
base64 = { workspace = true }
