[package]
name = "malefic-helper"
version = "0.1.0"
edition = "2021"


[features]
default = ["Win_Inject_APC", "prebuild", "community"]
community = []
professional = []
source = []
prebuild = []
sysinfo = []

Inject = []
Win_Inject_APC = ["Inject"]
Win_Inject_Asm = ["Inject"]
Win_Inject_Fiber = ["Inject"]
Win_Inject_Func = ["Inject"]
Win_Inject_Func_Pointer = ["Inject"]
Win_Inject_Process = ["Inject"]
Win_Inject_Thread = ["Inject"]

#Linux_Inject_Asm = ["Inject"]
#Linux_Inject_Fiber = ["Inject"]
#Linux_Inject_Func = ["Inject"]
#Linux_Inject_Func_Pointer = ["Inject"]
#Linux_Inject_Process = ["Inject"]
#Linux_Inject_Thread = ["Inject"]

rem = []
rem_static = ["rem"]
rem_reflection = ["rem"]

[dependencies]
anyhow = "1.0.81"
obfstr = "0.4.3"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.64"
sha2 = "0.10"
libc = "0.2"
byteorder = "1.4"
num-traits = "0.2"
num-derive = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
wmi = { git = "https://github.com/chainreactors/wmi-rs", optional = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
wmi = { git = "https://github.com/chainreactors/wmi-rs" }

[[test]]
name = "test_pipe"
harness = true
required-features = ["windows"]

[[test]]
name = "test_process"
harness = true
required-features = ["windows"]

[[test]]
name = "test_wmi"
harness = true
required-features = ["windows"]

[[test]]
name = "test_schelduler"
harness = true
required-features = ["windows"]

[[test]]
name = "test_token"
harness = true
required-features = ["windows"]

[[test]]
name = "test_service"
harness = true
required-features = ["windows"]

[[test]]
name = "test_reg"
harness = true
required-features = ["windows"]

[target.'cfg(unix)'.dependencies]
nix = "0.26"
users = "0.11"
