cargo-features = ["profile-rustflags"]
[package]
name = "malefic-modules"
version = "0.1.1"
edition = "2021"

[lib]
name = "malefic_modules"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# [lib]
# name = "custon-plugin"
# crate-type = ["cdylib"]

[features]

default = ["full"]

disable_register = []

nano = []

full = ["fs_full", "execute_full", "net_full", "sys_full"]

base = [
    "ls", "cd", "rm", "cp", "mv", "pwd", "cat", "upload", "download", "exec", "env", "info"
]

extend = [
    "bypass", 
    "kill", 
    "whoami", 
    "ps", 
    "netstat", 
    "registry", 
    "service", 
    "taskschd", 
    "wmi",
    "execute_bof", 
    "execute_shellcode", 
    "execute_assembly", 
    "execute_armory",
    "execute_exe", 
    "execute_dll", 
    "execute_local", 
    "mkdir", 
    "chmod"
]

fs_full = [
    "ls", "cd", "rm", "cp", "mv", "pwd", "mem", "mkdir", "chown", "chmod", "cat", "pipe","enum_drivers"
]

enum_drivers = []

ls = []
cd = []
rm = []
cp = []
mv = []
pwd = []
mem = []
mkdir = []
chmod = []
chown = []
cat = []
pipe = []

sys_full = [
    "info", "ps", "id", "env", "whoami", "kill", "bypass", "netstat", "wmi", "service", "inject",
    "registry", "taskschd",
    "getsystem", "runas", "privs", "rev2self"
]

info = ["malefic-helper/sysinfo"]
ps = ["malefic-helper/sysinfo"]
id = []
env = []
whoami = ["malefic-helper/sysinfo"]
kill = ["malefic-helper/sysinfo"]
bypass = []
netstat = []
wmi = ["malefic-helper/wmi"]
service = []
registry = []
taskschd = []
getsystem = []
runas = []
rev2self = []
privs = []
inject = []

execute_full = [
    "execute_assembly", 
    "execute_powershell",
    "dllspawn",
    "inline_local",
    "exec",
    "open",
    "execute_shellcode",
    "execute_bof",
    "execute_armory",
    "execute_exe",
    "execute_dll",
    "execute_local"
]

exec = []
open = []
execute_shellcode = []
execute_bof = []
execute_assembly = ["malefic-helper/clr"]
execute_powershell = ["malefic-helper/clr"]
execute_armory = []
execute_exe = []
execute_dll = []
execute_local = []
dllspawn = []
inline_local = []

net = []
net_full = ["upload", "download"]

upload = []
download = []


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
obfstr = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }
malefic-helper = { path= "../malefic-helper" }
malefic-trait = { path = "../malefic-trait"}
malefic-proto = { path = "../malefic-proto" }
tokio = { workspace = true, features = ["time", "rt"] }
tar = { workspace = true }


[build-dependencies]
prost-build = { workspace = true }
lazy_static = { workspace = true }
