[package]
name = "malefic-mutant"
version = "0.1.1"
edition = "2021"

[features]
default = []

source = []

[dependencies]
lazy_static = { workspace = true, features = ["spin_no_std"] }
prost = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = "1.0"
jsonschema = { version = "0.26.1", default-features = false }
toml_edit = "0.22.15"
strum = { workspace = true }
strum_macros = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
base64 = { workspace = true }
hex = "0.4.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
embed-resource = { workspace = true }
byteorder = { workspace = true }
goblin = "0.8"
log = "0.4"
chrono = { workspace = true }
colored = "2.2.0"
duct = "0.13"
rand = "0.8.5"
walkdir = "2.3.2"
url = { workspace = true }
regex = { workspace = true }
zip = "0.5.13"
malefic-proto = { path = "../malefic-proto", features = ["Crypto_AES", "enable_serde"] }
