[package]
name = "malefic-mutant"
version = "0.1.1"
edition = "2021"

[features]
default = []
source = []
# Enable to recompile malefic-srdi from source and extract .text shellcode.
# Requires: nightly toolchain + rust-src component.
# Without this feature, pre-built shellcode bytes in shellcode.rs are used.
rebuild_srdi = []

[dependencies]
malefic-gateway = { workspace = true }
const-random = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = "1.0"
jsonschema = { version = "0.26.1", default-features = false }
toml_edit = "0.22.15"
strum = { workspace = true }
strum_macros = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
base64 = { workspace = true }
hex = "0.4.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
embed-resource = { workspace = true }
byteorder = { workspace = true }
goblin = "0.8"
log = "0.4"
chrono = { workspace = true }
colored = "2.2.0"
duct = "0.13"
rand = { version = "0.8.5", features = ["small_rng"] }
fake = { version = "4", features = ["derive"] }
walkdir = "2.3.2"
url = { workspace = true }
regex = { workspace = true }
zip = "0.5.13"
syn = { workspace = true, features = ["full", "visit", "visit-mut", "parsing", "printing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
crc32fast = "1.3"
rustls = "0.23"
webpki-roots = "0.26"
malefic-proto = { workspace = true, features = ["crypto_aes", "enable_serde"] }
malefic-crypto = { workspace = true, default-features = true }
malefic-config = { workspace = true, features = ["encoder"] }
malefic-codec = { workspace = true, features = ["encoder", "codec_all"] }
malefic-common = { workspace = true }

[build-dependencies]
goblin = "0.8"
