[package]
name = "malefic-prelude"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
futures = "0.3.31"
lazy_static = "1.5.0"

malefic-core = { path = "../malefic-core"}
malefic-modules = { path = "../malefic-modules"}
malefic-helper = { path= "../malefic-helper", features = [ "default" ] }
malefic-proto = { path= "../malefic-proto", features = [ "Crypto_AES" ] }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.2"
