[package]
name = "malefic-prelude"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }

malefic-core = { path = "../malefic-core", features = [ ] }
malefic-modules = { path = "../malefic-modules"}
malefic-helper = { path= "../malefic-helper", features = [ "default" ] }
malefic-proto = { path= "../malefic-proto", features = [ "Crypto_AES" ] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

[build-dependencies]
embed-resource = { workspace = true }