[package]
name = "malefic-proto"
version = "0.1.0"
edition = "2021"

[features]
default = ["Crypto_AES"]

Crypto = []
Crypto_XOR = ["Crypto"]
Crypto_AES = ["Crypto", "aes", "ctr"]
Crypto_Chacha20 = ["Crypto", "chacha20"]

enable_serde = []

[dependencies]
prost = { version = "0.14.1" }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
snap = "1.1.1"
chacha20 = { version = "0.9.0", optional = true }
aes = { version = "0.8.4", optional = true }
ctr = { version = "0.9.2", optional = true }
nanorand = { version = "0.7.0", features = ["wyrand"] }
cfg-if = "1.0.0"
anyhow = "1.0.89"

[build-dependencies]
prost-build = "0.14.1"
