[package]
name = "malefic-proto"
version = "0.1.0"
edition = "2021"

[features]
default = ["Crypto_AES"]

Crypto = []
Crypto_XOR = ["Crypto"]
Crypto_AES = ["Crypto", "aes", "ctr"]
Crypto_Chacha20 = ["Crypto", "chacha20"]

secure = ["age", "rand"]

enable_serde = ["serde"]

[dependencies]
prost = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
snap = "1.1.1"
chacha20 = { version = "0.9.0", optional = true }
aes = { version = "0.8.4", optional = true }
ctr = { version = "0.9.2", optional = true }
age = { git = "https://github.com/chainreactors/rage", branch = "main", optional = true }
rand = { version = "0.8.5", optional = true }
nanorand = { version = "0.7.0", features = ["wyrand"] }
cfg-if = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-channel = "0.3.31"
cron = { version = "0.15", default-features = false }
chrono = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
