[package]
name = "malefic-proxydll"
version = "0.1.1"
edition = "2021"

[features]
default = ["proxy"]
proxy = []
block = []
native_thread = []

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
malefic-autorun = { workspace = true, optional = true }

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]
